--- a/app/composer.json
+++ b/app/composer.json
@@ -48,6 +48,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "escapestudios/symfony2-coding-standard": "^3.13",
         "fakerphp/faker": "^1.21",
         "friendsofphp/php-cs-fixer": "^3.16",
         "phpunit/phpunit": "^9.5",
